<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutMaster"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:id="@+id/cabecalho"
        android:weightSum="1"
        android:visibility="visible">

        <TextView
            android:id="@+id/nomeTabela1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_span="50"
            android:gravity="center"
            android:text="@string/quem_name"
            android:textColor="@android:color/holo_orange_dark"
            android:textColorHighlight="@color/abc_secondary_text_material_dark"
            android:textAlignment="center"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:textStyle="normal|bold"
            android:layout_gravity="center"
            android:textSize="33dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="70">

        <RelativeLayout
            android:id="@+id/layoutTabela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <TextView
            android:id="@+id/tit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/what_manga"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manga1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/who_manga1"
            android:layout_below="@+id/tit1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:textIsSelectable="true"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/manga2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/who_manga2"
            android:layout_below="@+id/manga1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:textIsSelectable="true"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/what_manga2"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_below="@+id/manga2"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/myManga1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/who_manga3"
            android:layout_below="@+id/tit2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:textIsSelectable="true"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/myManga2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="50"
            android:layout_gravity="center_vertical|right"
            android:text="@string/who_manga4"
            android:layout_below="@+id/myManga1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:textIsSelectable="true"
            android:textSize="20dp" />

            <TextView
                android:id="@+id/tit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="50"
                android:layout_gravity="center_vertical|right"
                android:text="@string/desenvolvedores"
                android:layout_marginTop="30dp"
                android:textSize="30dp"
                android:gravity="center"
                android:layout_below="@+id/myManga2"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ndev1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="50"
                android:layout_gravity="center_vertical|right"
                android:text="Erick Fernandes da Cruz"
                android:layout_below="@+id/tit3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/dev1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="50"
                android:layout_gravity="center_vertical|right"
                android:text="@string/who_dev1"
                android:layout_below="@+id/ndev1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:textIsSelectable="true"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dev1"
                android:id="@+id/ed"
                android:background="@drawable/ed"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/ndev2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="50"
                android:layout_gravity="center_vertical|right"
                android:text="Fernanda Yamada"
                android:layout_below="@+id/ed"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/dev2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="50"
                android:layout_gravity="center_vertical|right"
                android:text="@string/who_dev2"
                android:layout_below="@+id/ndev2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:textIsSelectable="true"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/kidgoku"
                android:layout_below="@+id/dev2"
                android:id="@+id/goku"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:id="@+id/x">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/logotipo"
        android:background="@drawable/animacao3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>



</LinearLayout>
